Initial fix for 07-flex-layout-2
These are the self checks that I think I completed it.
For some reason, I am not sure of the method I used when aligning the
cards in the main content.

I am still confused when setting properties like flex-grow
flex-basis and flex-shrink.

The header text is size 32px and weight 900.
The header text is vertically centered and 16px from the edge of the screen.
The footer is pushed to the bottom of the screen (the footer may go _below_ the bottom of the screen if the content of the 'cards' section overflows and/or if your screen is shorter).
The footer text is centered horizontally and vertically.
The sidebar and cards take up all available space above the footer.
The sidebar is 300px wide (and it doesn't shrink).
The sidebar links are size 24px, are white, and do not have the underline text decoration.
The sidebar has 16px padding.
There is 48px padding around the 'cards' section.
The cards are arranged horizontally, but wrap to multiple lines when they run out of room on the page.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,72 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.holy-grail {
+  display: flex;
+  flex: 1;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
+  font-weight: 900;
+  font-size: 32px;
   color: white;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding: 16px;
+  flex-shrink: 0;
+  font-size: 24px;
+}
+
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.content {
+  display: flex;
+  justify-content: flex-start; /* flex-start or stretch*/
+  padding: 48px;
+  align-items: stretch;
+  gap: 8px;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  display: flex;
+  padding: 16px;
+  flex: 1 2 300px;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
